# HelloWorld

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml  release_ubuntu.yml  release_windows.yml
src/: lib.cpp  lib.h  main.cpp
test/: test_version.cpp
